# coronium

./: .gitignore  CMakeLists.txt  README.org  architecture.cc  architecture.hh  bfd_arch.hh  block.cc  block.hh  blockaction.cc  capability.cc  capability.hh  cast.cc  comment_ghidra.cc  comment_ghidra.hh  condexe.cc  condexe.hh  consolemain.cc  context.cc  context.hh  coronium.pc.in  cover.hh  cpool.cc  cpool_ghidra.cc  cpool_ghidra.hh  crc32.cc  database.cc  database.hh  database_ghidra.hh  double.hh  dynamic.cc  emulate.cc  emulateutil.cc  emulateutil.hh  error.hh  filemanage.hh  float.cc  flow.cc  fspec.hh  funcdata.cc  funcdata.hh  (+75 more)
dependencies/: README.md
dependencies/ghidra/src/: CMakeLists.txt
include/: NOTES.org  action.hh  blockaction.hh  codedata.hh  crc32.hh  dynamic.hh  emulate.hh  flow.hh  ghidra_arch.hh  ghidra_context.hh  graph.hh  ifacedecomp.hh  loadimage.hh  loadimage_bfd.hh  memstate.hh  opbehavior.hh  options.hh  pcodeinject.hh  prettyprint.hh  printjava.hh  rangeutil.hh  sleigh_arch.hh  sleighbase.hh  slgh_compile.hh  test.hh  transform.hh  translate.hh  typegrp_ghidra.hh  unify.hh  variable.hh  varmap.hh  varnode.hh
include/coronium/: action.hh  address.hh  bfd_arch.hh  binary-image.hpp  block.hh  blockaction.hh  callgraph.hh  capability.hh  cast.hh  comment.hh  condexe.hh  config.hpp.in  context.hh  coreaction.hh  coroBinary.hpp  coronium.hpp.in  cover.hh  cpool.hh  database.hh  double.hh  dynamic.hh  emitters.hpp  emulate.hh  float.hh  flow.hh  fspec.hh  funcdata.hh  globalcontext.hh  grammar.hh  heritage.hh  inject_sleigh.hh  interface.hh  jumptable.hh  loadbinary.hpp  loadimage.hh  loadimage_bfd.hh  memstate.hh  merge.hh  op.hh  opbehavior.hh  (+33 more)
src/: CMakeLists.txt  action.cc  address.cc  architecture.cc  bfd_arch.cc  binary-image.cpp  block.cc  blockaction.cc  callgraph.cc  capability.cc  cast.cc  codedata.cc  comment.cc  condexe.cc  context.cc  coreaction.cc  coroBinary.cpp  coronium.cpp  cover.cc  cpool.cc  database.cc  database_ghidra.cc  double.cc  dynamic.cc  emitters.cpp  emulate.cc  emulateutil.cc  filemanage.cc  float.cc  flow.cc  fspec.cc  funcdata.cc  funcdata_op.cc  funcdata_varnode.cc  ghidra_process.cc  ghidra_translate.cc  globalcontext.cc  grammar.cc  graph.cc  heritage.cc  (+48 more)
tests/example_one/: Makefile  a.out  example_one.cpp
tests/example_two/: Makefile  example_two.cpp
